--- a/src/main/resources/static/css/homepage/body_responsiveness.css
+++ b/src/main/resources/static/css/homepage/body_responsiveness.css
@@ -1,13 +1,39 @@
-@media only screen and (max-width: 1300px){
-    .subsection{
-        display: flex;
+/* Add a media query to adjust the layout on smaller screens */
+@media (max-width: 900px) {
+    .subsection {
         flex-direction: column;
-        gap: 50px;
-        margin-top: 85px;
-        justify-content: center;
-        justify-items: center;
+        gap: 1px;
+    }
+
+    .subsection img {
+        margin-bottom: 20px;
     }
     .city{
         flex-direction: column-reverse!important;
     }
+}
+
+/* Add a media query to adjust the layout on medium-sized screens */
+@media (min-width: 90px) and (max-width: 2000px) {
+    .subsection p {
+        margin: 50px;
+    }
+
+
+}
+
+/* Add a media query to adjust the layout on large screens */
+
+@media only screen and (max-width: 1100px){
+    /*.subsection{*/
+    /*    display: flex;*/
+    /*    flex-direction: column;*/
+    /*    gap: 170px;*/
+    /*    margin-top: 85px;*/
+    /*    justify-content: center;*/
+    /*    justify-items: center;*/
+    /*}*/
+    /*.city{*/
+    /*    flex-direction: column-reverse!important;*/
+    /*}*/
 }
