footer and dialog css

--- a/src/main/resources/static/css/about_us/about_us.css
+++ b/src/main/resources/static/css/about_us/about_us.css
@@ -181,6 +181,7 @@ textarea{
     display: none;
 }
 dialog {
+    position: absolute;
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.25);
