--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -222,6 +222,9 @@
 						</div>
 					</div>
 				</div>
+				<div class="centerbutton">
+					<button id="load-more-button">Load More</button>
+				</div>
 	</section>
 
 				<div class="bar-divider"></div>
