working on login

--- a/src/main/resources/static/css/venue_pages/venue.css
+++ b/src/main/resources/static/css/venue_pages/venue.css
@@ -194,6 +194,13 @@ h2, h3 {
     padding: 1rem;
     border-radius: 10px;
 }
+.answer-wrapper,
+.thumbs-icon-wrapper,
+.question-wrapper{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
 @media screen and (min-width: 700px) {
     .answered-question-wrapper {
         display: flex;
