--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -4,13 +4,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 	<head>
-		
+
 		<div th:fragment="myheader (title)">
-			
+
 			<title th:text="${title}"></title>
-			
+
 			<meta charset="UTF-8">
-			
+
 			<!--meta tags for responsiveness-->
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 			<meta name="robots" content="noindex"/>
@@ -19,51 +19,59 @@
 					 to submit tips that rookies can use, such as finding the closest,
 			         affordable parking spots, how early to get to the venue depending
 			         on the artist, which restaurants are good, and much more!">
-		
+
 			<!--custom css-->
 			<link rel="stylesheet" th:href="@{/css/navbar.css}">
 			<link rel="stylesheet" th:href="@{/css/footer.css}">
 			<link rel="stylesheet" th:href="@{/css/universalStyle.css}">
-			
+
 			<!--bootstrap css cdns-->
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
-			
+
 			<!--bootstrap js cdn-->
 			<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 			<script src="/js/carousel.js" defer></script>
-			
+
 			<!-- Custom JS Navbar -->
 			<script src="/js/navbar.js"></script>
-			
+
 		</div>
 
 	</head>
 
-	
+
 	<nav th:fragment="mynav" class="topNav">
-		
+
 			<a class="venued" th:href="@{/}">
 				<img  class="venued-logo" src="/imgs/venued-logo.jpg" alt="image of the word venued in white block letters">
 			</a>
-		
+
 			<a href="#" class="toggle-button">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</a>
-		
+
 			<ul class="nav-items">
+
+<!--CHATGPT-->
+<!--				<div class="searchbar">-->
+<!--				<input class="search_input" type="text" name="" placeholder="Search...">-->
+<!--				<img src="imgs/search.svg" alt="" class="search_icon">-->
+<!--				<div class="dropdown-menu">-->
+<!--				&lt;!&ndash; Dropdown menu items go here &ndash;&gt;-->
+<!--				</div>-->
+<!--				</div>-->
+
+
+
 				<div class="searchbar">
-					
 					<input class="search_input" type="text" name="" placeholder="Search...">
 					<img th:src="@{imgs/search.svg}" alt="" class="search_icon">
-					
-					<section class="results-container">
-					
-					</section>
 				</div>
+
 				<div class="user-container">
 					<button type="submit" class="signup-btn nav-btn" onclick="window.location.href='/users/login'">Login</button>
 					<button type="submit" class="login-btn nav-btn" onclick="window.location.href='/users/register'">Register</button>
@@ -87,12 +95,12 @@
 					<p>600 Navarro Street,<br> San Antonio, TX 78209</p>
 				</div>
 			</div>
-			
+
 			<div class="about_us_container">
 				<a th:href="@{/about_us}" class="about_us">About Us</a>
 				<a th:href="@{/about_us#contact-input}" class="contact_us_link">Contact Us</a>
 			</div>
-			
+
 			<div class="rightSide">
 				<div class="subscribe">
 					<form class="subscribe-form" th:action="@{/about_us/subscribe}" method="post">
