starting results functionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -174,6 +174,7 @@
 								<small>San Antonio, TX</small>
 							</div>
 						</figure>
+						
 						<div>
 							<p>Does this venue have free parking</p>
 							<div>
@@ -225,17 +226,15 @@
 				<div class="centerbutton">
 					<button id="load-more-button">Load More</button>
 				</div>
-	</section>
+		</section>
 
 				<div class="bar-divider"></div>
 			
 		<footer th:replace="~{partials/venued_partials.html :: footer}"></footer>
-
 		<script src="/js/homepage/events.js"></script>
 		<script src="/js/homepage/loadMore.js"></script>
 		<script src="/js/homepage/scrolling-reveal.js"></script>
-		<script src="/js/homepage/results.js"></script>
-
+		<script src="/js/results.js"></script>
 	</body>
 </html>
 
