--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -55,21 +55,22 @@
 			</a>
 
 			<ul class="nav-items">
-
 <!--CHATGPT-->
 <!--				<div class="searchbar">-->
-<!--				<input class="search_input" type="text" name="" placeholder="Search...">-->
-<!--				<img src="imgs/search.svg" alt="" class="search_icon">-->
+<!--				<input class="search_input" type="text" name="" placeholder="Search...">--><!--				<img src="imgs/search.svg" alt="" class="search_icon">-->
 <!--				<div class="dropdown-menu">-->
 <!--				&lt;!&ndash; Dropdown menu items go here &ndash;&gt;-->
 <!--				</div>-->
 <!--				</div>-->
 
-
-
 				<div class="searchbar">
 					<input class="search_input" type="text" name="" placeholder="Search...">
 					<img th:src="@{imgs/search.svg}" alt="" class="search_icon">
+					<section class="result-container hide">
+						<ul class="results">
+						
+						</ul>
+					</section>
 				</div>
 
 				<div class="user-container">
@@ -80,6 +81,7 @@
 	</nav>
 
 	<footer th:fragment="footer" class="footer">
+		
 		<div class="footer_content">
 			<div class="leftSide">
 				<div class="venuedBlack">
@@ -111,5 +113,9 @@
 				</div>
 			</div>
 		</div>
+		
+		<scripts src="js/results.js"></scripts>
+		
 	</footer>
+	
 </html>
