--- a/src/main/resources/static/css/about_us/about_us.css
+++ b/src/main/resources/static/css/about_us/about_us.css
@@ -199,6 +199,14 @@ dialog {
     align-items: center;
     margin-bottom: 10px;
 }
+.close-button{
+    background-color: transparent;
+    border: none;
+    color: #000;
+    cursor: pointer;
+    font-size: 1.5em;
+    font-weight: bold;
+}
 .personalSocialMediaLogos{
     display: flex;
     flex-direction: row;
