names on mobile

--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -173,19 +173,19 @@
         <!--        Mobile Slider Container                   -->
         <div class="slider-container">
                 <div class="slide">
-                        <h2>Slide 1</h2>
+                        <h2>Deshawn</h2>
                         <img src="/imgs/deshawn.jpg" class="deshawn" alt="image of deshawn">
                 </div>
                 <div class="slide">
-                        <h2>Slide 2</h2>
+                        <h2>Rodrigo</h2>
                         <img src="/imgs/rodrigo.jpg" class="rodrigo" alt="image of rodrigo">
                 </div>
                 <div class="slide">
-                        <h2>Slide 3</h2>
+                        <h2>Tesfalem</h2>
                         <img src="/imgs/tesfalem.jpg" class="tesfalem" alt="image of tesfalem">
                 </div>
                 <div class="slide">
-                        <h2>Slide 4</h2>
+                        <h2>Frances</h2>
                         <img src="/imgs/frances.png" class="frances" alt="image of frances">
                 </div>
         </div>
