--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -5,42 +5,169 @@
   <link rel="stylesheet" th:href="@{/css/universalStyle.css}">
   <link rel="stylesheet" th:href="@{/css/profile/profile.css}">
 </head>
-
 <body>
-<div class="page-wrapper">
+  <div class="page-wrapper">
+        <nav th:replace="~{partials/venued_partials :: mynav}"></nav>
 
-  <nav th:replace="~{partials/venued_partials :: mynav}"></nav>
-
-<div class="title">INSERT USERNAME's Profile</div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <!--^^^RESPONSIVENESS^^^-->
-                <hr class="smallLine">
-                <!--RESULTS CARDS-->
-                <div class="card">
-                    <div class="col">
-                        <div class="row">
-                            <div class="col col-lg-auto col-md-auto image">
-                                <img class="imagePlaceholder" src="/imgs/Avatar-Placeholder.png">
+        <section class="container">
+            <div class="row container">
+                <div class="col first">
+                    <div>
+                        <img src="../imgs/Avatar-Placeholder.png" alt="user-image">
+                    </div>
+                    <div>
+                        <p>
+                            <button>Edit Profile</button>
+                        </p>
+                        <form action="">
+                            <div>
+                               <label for="name">Name</label>
+                               <input type="text" name="name" id="name">
                             </div>
-                            <div class="col col-sm venueInfo">
-                                <p>INSERT USERNAME</p>
-
+                            <div>
+                               <label for="bio">Bio</label>
+                               <textarea name="bio" id="bio" cols="30" rows="10"></textarea>
                             </div>
-                            <div class="row">
-                                <button class="gotoPage">change password</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col p-0 second">
+                    <h1>User Profile</h1>
+                    <ul class="nav nav-tabs border border-0" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
+                                <span class="badge rounded-pill bg-secondary me-1">0</span>
+                                Answers
+                            </button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
+                                <span class="badge rounded-pill bg-secondary me-1">0</span>
+                               Questions
+                            </button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">
+                                <span class="badge rounded-pill bg-secondary me-1">0</span>
+                                Tips
+                            </button>
+                        </li>
+                    </ul>
+                    <div class="tab-content px-3 mb-4 border border-1" id="myTabContent">
+                        <!---- size and Crust tab-pane ---->
+                        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                            <!-- first card begins here -->
+                            <div class="card mb-3">
+                                <div class="card-header bg-primary text-white">
+
+                                </div>
+                                <div class="card-header">
+
+                                </div>
+                                <div class="card-header bg-white">
+
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+
+                                    </li>
+                                    <li class="list-group-item">
+
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="card border border-0">
+                                <div class="card">
+                                    <div class="card-header">
+
+                                    </div>
+                                    <div class="card-header bg-white">
+
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+
+                                        </li>
+                                        <li class="list-group-item">
+
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!---- cheese and Sauce tab-pane ------->
+                        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <!-- second card begins here -->
+                            <div class="card mb-3">
+                                <div class="card-header bg-primary text-white">
+
+                                </div>
+                                <div class="card-header">
+
+                                </div>
+                                <div class="card-header bg-white">
+
+                                </div>
+                            </div>
+                            <div class="card border border-0">
+                                <div class="card">
+                                    <div class="card-header">
+
+                                    </div>
+                                    <div class="card-header bg-white">
+
+                                    </div>
+
+                                    <div class="card-header border border-1 bg-white">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!------ Topping tap-pane ------->
+                        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                            <!-- third card begins here -->
+                            <div class="card mb-3">
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+
+                                    </li>
+                                    <li class="list-group-item">
+
+                                    </li>
+                                    <li class="list-group-item">
+
+                                    </li>
+                                    <li class="list-group-item">
+
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="card border border-0">
+                                <div class="card">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+
+                                        </li>
+                                        <li class="list-group-item">
+
+                                        </li>
+                                        <li class="list-group-item">
+
+                                        </li>
+                                        <li class="list-group-item">
+
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--END OF RESPONSIVENESS-->
             </div>
-        </div>
-    </div>
-
-</div>
-
+        </section>
+  </div>
 </body>
 </html>
