--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -186,7 +186,9 @@
     height: 200px;
     min-height: 100px;
     background-color: #000000f2;
-    padding: 0 0px 5px 0px;
+    padding: 0 0 5px 0;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 0 9px 21px 7px rgba(0,0,0,0.25);
 }
 
 .results{
@@ -203,7 +205,7 @@
     align-content: center;
     align-items: center;
     width: 100%;
-    height: 40px;
+    height: 50px;
     border-bottom: #ffffff22 solid 1px;
     color: white;
     padding: 10px 0;
@@ -218,13 +220,13 @@
 .result .result-image{
     margin-left: 10px;
     border-radius: 10%;
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     overflow: hidden;
 }
 
 .result .result-image img{
-    height: 40px;
+    height: 50px;
     width: auto;
 }
 
