--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -3,13 +3,14 @@
 <head>
     <div th:replace="partials/venued_partials :: myheader('Venue Page')" th:remove="tag"></div>
     <link rel="stylesheet" th:href="@{/css/venue_pages/venue.css}">
+    <link rel="stylesheet" th:href="@{/css/universalStyle}">
 </head>
 <body>
 
     <div class="page-wrapper">
         <!---- nav bar ---->
         <nav th:replace="partials/venued_partials :: mynav"></nav>
-
+<div th:object="${venue}">
         <!--------- header section ------->
         <header class="wrapper header-wrapper">
 
@@ -18,11 +19,11 @@
             </div>
 
             <div class="event-card">
-                <h1 class="title">Alamadome</h1>
+                <p class="title" th:text="${venue.venueName}"></p>
 
                 <div class="event-container">
                     <div class="#">
-                        <h3 class="title">Event</h3>
+                        <p class="title">Event</p>
                         <p class="desc event-desc">This is a section for event description</p>
                     </div>
 
@@ -31,7 +32,7 @@
                     </div>
                 </div>
 
-                <p class="desc venue-address">Venue Address</p>
+                <p class="desc venue-address" th:text="${venue.address}"></p>
             </div>
 
         </header>
@@ -43,14 +44,14 @@
                 <!--------- tips card ---------->
                 <div class="tip-card">
                     <div class="card-wrapper">
-                        <h2 class="title card-heading">Tips</h2>
+                        <p class="title card-heading">Tips</p>
                         <button type="button" class="cta-button" data-bs-toggle="modal" data-bs-target="#exampleModal1">Add a Tip</button>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content tip-modal">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel1">Add a tip</h1>
+                                        <p class="modal-title fs-5 title" id="exampleModalLabel1">Add a tip</p>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -60,7 +61,7 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="Submit" class="btn btn-primary">Submit</button>
+                                                <button type="Submit" class="btn">Submit</button>
                                             </div>
                                         </form>
                                     </div>
@@ -70,67 +71,36 @@
                         </div>
                         <!---- modal end here --->
                     </div>
-                    <ul class="list-tips">
-                        <li>
-                            <div class="user-wrapper">
-                                <span><img src="/imgs/Avatar-Placeholder.png" alt="" class="user-image"></span>
-                                <p class="">username</p>
-                            </div>
-                            <div class="thumbs-icon-wrapper">
-                                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-                                <a href="#"><span class="fa-solid fa-thumbs-up text-primary"></span></a>
-                                <a href="#"><span class="fa-solid fa-thumbs-down text-primary"></span></a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="user-wrapper">
-                                <span><img src="/imgs/Avatar-Placeholder.png" alt="" class="user-image"></span>
-                                <p>username</p>
-                            </div>
-                            <div class="thumbs-icon-wrapper">
-                                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-                                <a href="#"><span class="fa-solid fa-thumbs-up text-primary"></span></a>
-                                <a href="#"><span class="fa-solid fa-thumbs-down text-primary"></span></a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="user-wrapper">
-                                <span><img src="/imgs/Avatar-Placeholder.png" alt="" class="user-image"></span>
-                                <p>username</p>
-                            </div>
-                            <div class="thumbs-icon-wrapper">
-                                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-                                <a href="#"><span class="fa-solid fa-thumbs-up text-primary"></span></a>
-                                <a href="#"><span class="fa-solid fa-thumbs-down text-primary"></span></a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="user-wrapper">
-                                <span><img src="/imgs/Avatar-Placeholder.png" alt="" class="user-image"></span>
-                                <p>username</p>
-                            </div>
-                            <div class="thumbs-icon-wrapper">
-                                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-                                <a href="#"><span class="fa-solid fa-thumbs-up text-primary"></span></a>
-                                <a href="#"><span class="fa-solid fa-thumbs-down text-primary"></span></a>
-                            </div>
-                        </li>
-
-                    </ul>
+                    <div th:each="tip : ${tips}">
+                        <ul class="list-tips">
+                            <li>
+                                <div class="user-wrapper">
+                                    <span><img th:src="${tip.user.imgPath}" alt="" class="user-image"></span>
+                                    <p class="" th:text="${tip.user.userName}"></p>
+                                </div>
+                                <div class="thumbs-icon-wrapper">
+                                    <span th:text="${tip.tipContent}">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                        elit</span>
+                                    <a href="#"><span class="fa-solid fa-thumbs-up text-primary"></span></a>
+                                    <a href="#"><span class="fa-solid fa-thumbs-down text-primary"></span></a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
 
                 <!------ Answers and question card ------->
                 <div class="question-card">
                     <div class="card-wrapper">
-                        <h2 class="title card-heading">Questions</h2>
+                        <p class="title card-heading">Questions</p>
                         <button type="button" class="cta-button" data-bs-toggle="modal" data-bs-target="#exampleModal2">Ask a Question</button>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content question-modal">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel2">Ask Questions</h1>
+                                        <p class="modal-title fs-5 title" id="exampleModalLabel2">Ask a Question</p>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -197,7 +167,7 @@
 
             <!------- answered questions section -------->
             <section class="wrapper answered-questions">
-                <h2 class="title">Answered Questions</h2>
+                <p class="title">Answered Questions</p>
                 <div class="answered-question-wrapper">
                     <ul class="list-answered-questions">
                         <li>
@@ -253,7 +223,7 @@
 
             <!---- Restaurant cards section ----->
             <section class="wrapper restaurants-wrapper">
-                <h2 class="title">Restaurants Near You</h2>
+                <p class="title">Restaurants Near You</p>
                 <div class="restaurant-cards">
                     <div class="restaurant-card">
                         <figure>
@@ -335,7 +305,7 @@
                 </div>
             </section>
         </main>
-
+</div>
         <!-- footer section -->
         <footer th:replace="partials/venued_partials :: footer"></footer>
     </div>
