--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
 			<div class="page-wrapper">
 
 				<section class="navSection">
+					<div class="set-tone"></div>
 					<nav th:replace="~{partials/venued_partials :: mynav}"></nav>
 				</section>
 
@@ -126,13 +127,12 @@
 					</div>
 				</section>
 
-				<div class="bar-divider"></div>
-
-
 <!--BODY-->
 				<section class="main">
 					<div class="main-body">
+						
 						<div class="title">What is Venued?</div>
+						
 						<div class="subsection reveal1">
 							<img th:src="@{imgs/homepage/body/confetti.png}" alt="">
 							<p>Have you ever driven to another city to see a band and found out that the cheapest
