mobile slider overlay

--- a/src/main/resources/static/css/about_us/about_us.css
+++ b/src/main/resources/static/css/about_us/about_us.css
@@ -370,5 +370,36 @@ dialog {
         transform: scale(0.9);
         box-shadow: 0.313rem 0.313rem 2.5rem -0.063 var(--shadow);
     }
+    .slide{
+        position: relative;
+    }
+    .slide .flip {
+        position: absolute;
+        top: 62px;
+        left: 23px;
+        width: 88%;
+        height: 84%;
+        opacity: 0;
+        border-radius: 10px;
+        background: dimgray;
+        text-align: center;
+        transition: opacity 0.3s ease-in-out;
+    }
+    .slide.flipped .flip {
+        opacity: .82;
+    }
 
+    .personalSocialMediaLogos{
+        justify-content: center;
+    }
+
+    .mobileOverlay{
+        display: none;
+        /*position: absolute;*/
+        /*top:0;*/
+        /*bottom: 0;*/
+        /*!*opacity: 0;*!*/
+        /*background: rgba(0,0,0,0.6);*/
+        /*transition: opacity 0.3s ease-in-out;*/
+    }
 }
