profile page on progress

--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -10,7 +10,7 @@
         <nav th:replace="~{partials/venued_partials :: mynav}"></nav>
 
         <section class="container mt-5 border">
-            <div class="row container">
+            <div class="row p-3 mx-0 container">
                 <div class="col-sm-5 first border">
                     <div>
                         <p><img src="../imgs/Avatar-Placeholder.png" alt="user-image"></p>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-7 second">
+                <div class="col-sm-7 second border">
                     <h3>User Profile</h3>
                     <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
                         <li class="nav-item me-5" role="presentation">
