--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -173,8 +173,10 @@
         <!--        Mobile Slider Container                   -->
         <div class="slider-container">
                 <div class="slide">
-                    <h2>Click for more info</h2>
                     <img src="/imgs/deshawn.jpg" class="image deshawn" alt="image of deshawn">
+                    <div class="overlay">
+                        Click for more info
+                    </div>
                     <div class="flip">
                         <p>
                             Deshawn is a full stack developer with a passion for creating
@@ -196,8 +198,10 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Click for more info</h2>
                     <img src="/imgs/rodrigo.jpg" class="image rodrigo" alt="image of rodrigo">
+                    <div class="overlay">
+                        Click for more info
+                    </div>
                     <div class="flip">
                         <p>
                             Rodrigo is a full stack developer with a passion for creating
@@ -217,8 +221,10 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Click for more info</h2>
                     <img src="/imgs/tesfalem.jpg" class="image tesfalem" alt="image of tesfalem">
+                    <div class="overlay">
+                        Click for more info
+                    </div>
                     <div class="flip">
                         <p>
                             Tesfalem is a full stack developer with a passion for creating
@@ -238,8 +244,10 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Click for more info</h2>
                     <img src="/imgs/frances.png" class="image frances" alt="image of frances">
+                    <div class="overlay">
+                        Click for more info
+                    </div>
                     <div class="flip">
                         <p>
                             Frances is a full stack developer with a passion for creating
