--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -72,7 +72,7 @@
     border: none;
 }
 
-.search_location_input{
+#search_location_input{
     width: 35%;
 
     border-left: #ffffff22 solid .01em;
