working location drop down

--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -33,7 +33,7 @@
 			<script src="/js/carousel.js" defer></script>
 
 			<!-- Navbar JS -->
-			<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALW5WgCCQUPS06lkXKMliUUmbXPVIaVic&libraries=places"></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALW5WgCCQUPS06lkXKMliUUmbXPVIaVic&libraries=places"></script>
 
 		</div>
 	</head>
@@ -62,6 +62,9 @@
 						<ul class="results">
 						</ul>
 					</section>
+					<section>
+						<ul class="search_results">
+						</ul>
 					</section>
 				</div>
 
@@ -108,7 +111,5 @@
 		</div>
 		
 		<scripts src="js/results.js"></scripts>
-		
 	</footer>
-	
 </html>
